# agentic_testing_research

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  Dockerfile.playwright-runner  Dockerfile.research-agent  Dockerfile.tcp-proxy  LICENSE  README.md  hypotheses_fixing.md  pyproject.toml  test-runs.json  test-runs.schema.json
agent_runner/: agent.py  llm.py  main.py  settings.py
agent_runner/agent_tools/: base.py  file_io.py  json_validator.py  npx_playwright.py  playwright_mcp.py  result.schema.json  sandbox.py  service.py
agent_runner/agent_tools/playwright_scaffold/: package-lock.json  package.json  playwright.config.ts
agent_runner/collector/: service.py
agent_runner/collector/outputs/: base.py  console.py  formatting.py  jsonl.py
experiment_orchestration/: agent_networking.py  agent_runner.py  constants.py  data_classes.py  experiment_runner.py  experiment_suite_runner.py  helper.py  models.py  script_runner.py  settings.py  tcp_proxy.py  test_objects.py
prompts/: SYSTEM_BASE_PROMPT.md  SYSTEM_PROMPT_AGENT.md  SYSTEM_PROMPT_SCRIPT.md  USER_PROMPT.md
test-objects/RealWorld/: CONTEXT.md  README.md  SPECIFICATIONS.md
test-objects/RealWorld/defect/: docker-compose.yml
test-objects/RealWorld/original/: docker-compose.yml
test-objects/RealWorld/structure_3/: docker-compose.yml
test-objects/WorkshopHub/: CONTEXT.md  SPECIFICATIONS.md
test-objects/WorkshopHub/defect/: docker-compose.yml  next.config.ts  package-lock.json
test-objects/WorkshopHub/original/: components.json  eslint.config.mjs
test-objects/WorkshopHub/structure_1/: .dockerignore  (+2 more)
(+79 files in other folders)
